syntax = "proto3";

package api;

option go_package = "./api";

service ApiService {
  rpc Auth(AuthRequest) returns (AuthResponse) {}
  rpc Reset (ResetRequest) returns (ResetResponse) {}
  rpc BlacklistAdd (BlacklistAddRequest) returns (BlacklistAddResponse) {}
  rpc BlacklistRemove (BlacklistRemoveRequest) returns (BlacklistRemoveResponse) {}
  rpc WhitelistAdd (WhitelistAddRequest) returns (WhitelistAddResponse) {}
  rpc WhitelistRemove (WhitelistRemoveRequest) returns (WhitelistRemoveResponse) {}
}

message AuthRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message AuthResponse {
  bool ok = 1;
}

message ResetRequest {
  string login = 1;
  string ip = 2;
}

message ResetResponse {
  bool ok = 1;
}

message SubNet {
  string ip = 1;
  string mask = 2;
}

message BlacklistAddRequest {
  SubNet sub_net = 1;
}

message BlacklistAddResponse {}

message BlacklistRemoveRequest {
  SubNet sub_net = 1;
}

message BlacklistRemoveResponse {}

message WhitelistAddRequest {
  SubNet sub_net = 1;
}

message WhitelistAddResponse {}

message WhitelistRemoveRequest {
  SubNet sub_net = 1;
}

message WhitelistRemoveResponse {}